@@ -171,7 +171,7 @@ final class BrowserFileListComp extends SimpleComp {
                         .mapToInt(entry -> table.getItems().indexOf(entry))
                         .toArray();
                 table.getSelectionModel()
-                        .selectIndices(table.getItems().indexOf(c.getList().get(0)), indices);
+                        .selectIndices(table.getItems().indexOf(c.getList().getFirst()), indices);
             });
         });
     }
@@ -428,11 +428,8 @@ final class BrowserFileListComp extends SimpleComp {
 
         private final StringProperty img = new SimpleStringProperty();
         private final StringProperty text = new SimpleStringProperty();
-        private final Node imageView = new PrettySvgComp(img, 24, 24)
-                .createRegion();
         private final StackPane textField =
                 new LazyTextFieldComp(text).createStructure().get();
-        private final HBox graphic;
 
         private final BooleanProperty updating = new SimpleBooleanProperty();
 
@@ -463,7 +460,8 @@ final class BrowserFileListComp extends SimpleComp {
             };
             text.addListener(listener);
 
-            graphic = new HBox(imageView, textField);
+            Node imageView = new PrettySvgComp(img, 24, 24).createRegion();
+            HBox graphic = new HBox(imageView, textField);
             graphic.setSpacing(10);
             graphic.setAlignment(Pos.CENTER_LEFT);
             HBox.setHgrow(textField, Priority.ALWAYS);
