@@ -47,7 +47,7 @@ public class StandaloneFileBrowser {
                     .apply(struc -> AppFont.normal(struc.get()));
             var window = AppWindowHelper.sideWindow(AppI18n.get("openFileTitle"), stage -> comp, false, null);
             model.setOnFinish(fileStores -> {
-                file.accept(fileStores.size() > 0 ? fileStores.get(0) : null);
+                file.accept(fileStores.size() > 0 ? fileStores.getFirst() : null);
                 window.close();
             });
             window.show();
@@ -63,7 +63,7 @@ public class StandaloneFileBrowser {
                     .apply(struc -> AppFont.normal(struc.get()));
             var window = AppWindowHelper.sideWindow(AppI18n.get("saveFileTitle"), stage -> comp, true, null);
             model.setOnFinish(fileStores -> {
-                file.setValue(fileStores.size() > 0 ? fileStores.get(0) : null);
+                file.setValue(fileStores.size() > 0 ? fileStores.getFirst() : null);
                 window.close();
             });
             window.show();
